# mechanic-booking-app

./: .firebaserc  .gitignore  CLAUDE.md  EMAIL_NOTIFICATION_SETUP.md  README.md  REFACTOR_SUMMARY.md  cloudbuild.dev.yaml  cloudbuild.yaml  cursor.config.toml  deploy_rules.sh  docker-compose.cloud.yml  docker-compose.yml  firestore-schema.md  firestore.indexes.json  firestore.rules
backend/: Dockerfile  firestore.rules  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh
backend/app/: auth.py  config.py  debug_secrets.py  firestore.py  google_calendar.py  main.py  models.py  notifications.py  tasks.py
backend/app/routers/: __init__.py  admin.py  availability.py  bookings.py  customers.py  health.py  mechanics.py  services.py  users.py  vehicles.py  workorders.py
backend/app/services/: __init__.py  booking_service.py  nhtsa_service.py
backend/app/utils/: secret_manager.py  service_area.py  slots.py
backend/scripts/: init_firestore.py  set_first_admin.py  update_mechanic_specialties.py
backend/tests/: conftest.py  test_availability_seed.py  test_booking_transaction.py  test_dynamic_availability.py  test_health.py  test_slots.py
backend/worker/: Dockerfile  email_service.py  main.py  requirements.txt  secret_manager.py
backend/worker/templates/: approval.html  cancellation.html  confirmation.html  customer_invitation.html  denial.html  reschedule_admin_notification.html  reschedule_request.html
docs/: EMAIL_NOTIFICATION_SETUP.md  README.md  apis.md  availability-refactor.md  tasks.md
frontend/: Dockerfile  Dockerfile.dev  (+3 more)
(+100 files in other folders)
