[project]
name = "mechanic-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kayla",email = "brewer.kaylam@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "google-cloud-firestore (>=2.20.2,<3.0.0)",
    "google-cloud-secret-manager (>=2.23.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

